DB, Exceptions